--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@ body {
     padding: 0;
     background: #000;
 }
+
+.container ul {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.container ul li {
+    position: relative;
+    list-style: none;
+    margin: 0 2px;
+}
+
+.container ul li a {
+    width: 80px;
+    height: 80px;
+    display: block;
+    transition: 0.5s;
+    background: #eee;
+}
